...
    <string name="clip_sync_location">Bluetooth usage requires some permissions. Please allow them in the next dialog!</string>
    <string name="clip_sync_location_denied">Bluetooth needs permission!</string>
    <string name="scanning_device">Scanning device </string>
    <string name="clip_sync_open_on_computer">You should open this link on your computer! Do you want to open it here anyways?</string>

    <!-- Notification data -->
    <string name="notification_channel_name" translatable="false">LearnJava notification channel</string>
    <string name="notification_channel_description" translatable="false">…</string>
    <string name="notification_exam_ready">Exam ready</string>
    <string name="notification_exam_name_message">\'%1$s\' exam can now be started again!</string>

    <!-- Text for the drawer -->
    <string name="courses">Courses</string>
    <string name="tasks">Tasks</string>
...
    <string name="exam_locked">Exam locked</string>
    <string name="exam_unfinished">Exam in development</string>
    <string name="exam_development_info">This exam is currently in development! It can\'t be used for now.</string>
    <string name="hour_suffix">h</string>
    <string name="minute_suffix">m</string>
    <string name="second_suffix">s</string>
    <string name="exam">Exam</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="finish_exam">Finish exam</string>
    <string name="close_exam">Close exam</string>
    <string name="confirm_finish_exam">Are you sure you want to finish the exam?</string>
    <string name="exam_time_expired">The exam time has expired!</string>
    <string name="unfortunate">Unfortunate</string>
    <string name="confirm_abandon_exam">Are you sure you want to abandon this exam?</string>
    <string name="exam_passed">Exam passed!</string>
    <string name="exam_failed">Exam failed!</string>
    <string name="points">points</string>
    <string name="ongoing_exam">Ongoing exam</string>
    <string name="ongoing_exam_detail">Don\'t forget to finish the exam!</string>
    <string name="top_score">Top score:</string>
    <string name="no_answer_given">No answer given…</string>
    <string name="confirm_exam_start">Are you sure you want to start this exam?</string>

    <!-- Question -->
    <string name="question_icon">Question status icon</string>
    <string name="unanswered_question">There is 1 unanswered question!</string>
    <string name="unanswered_questions">There are %1$s unanswered questions!</string>
    <string name="multi_choice">multiple choices possible</string>
    <string name="text_question_hint">Enter your answer here</string>
    <string name="text_question_solution">A possible solution:</string>
    <string name="true_answer">TRUE</string>
    <string name="false_answer">FALSE</string>

...
