...
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:activity=".ExamActivity"
    android:id="@+id/exam_root">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>

        <!-- Showing when the questions have been parsed and selected -->
...
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <!-- Showing when the exam is in progress -->
               <RelativeLayout
                   android:id="@+id/remainingTimeLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:visibility="visible"
                   android:layout_centerInParent="true">

...
                       app:timeTextSize="@dimen/big_text_size" />

               </RelativeLayout>

               <!-- Showing when the exam is finished to display result -->
               <LinearLayout
                   android:id="@+id/examResultLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:visibility="gone"
                   android:layout_centerInParent="true"
                   android:gravity="start|center_vertical">
...

               </LinearLayout>

           </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questionsLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/finishExamButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countdownAndResultLayout"/>

            <Button
                android:id="@+id/finishExamButton"
...
