...
        android:id="@+id/questionSep1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@android:color/black" />

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/text_question_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/padding" />

    <TextView
        android:visibility="gone"
        android:id="@+id/answerDisplayerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/small_margin"/>

    <LinearLayout
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_question_solution"
            android:textSize="@dimen/medium_text_size"/>

        <TextView
            android:id="@+id/possibleSolutionTextView"
            android:textSize="@dimen/small_text_size"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="*accepted solution*"
            android:background="@drawable/correct_answer_background"
...
