...
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- When the background task finished this is showing -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chapterComponents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:fastScrollEnabled="false"
                android:layout_centerInParent="true"
                android:visibility="gone"
...
